# glyphis

./: .gitignore  .gitmodules  README.md  package.json  tsconfig.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
examples/bench-anim/: app.ts
examples/bench-bridge/: app.ts
examples/bench-dbmon/: app.ts
examples/bench-rows/: app.ts
examples/calculator/: app.ts  app.tsx  tsconfig.json
examples/counter/: app.tsx
examples/image-gallery/: app.ts
examples/react-counter/: app.tsx
examples/react-todo/: app.tsx
examples/text-input/: app.ts
examples/vue-counter/: app.ts  index.html
native/android/: settings.gradle.kts
native/android/app/src/main/cpp/: CMakeLists.txt  bridge_common.h  jsc_bridge.cpp  platform_bridge.cpp  polyfills.cpp  yoga_bridge.cpp
scripts/: build-android.ts  build-common.ts  build-ios.ts  build-macos.ts  debug-calc.ts  dump-layout.ts  screenshot.ts  test-click-area.ts
src/: accessibility.ts  canvas-renderer.ts  commands.ts  components.ts  events.ts  hooks.ts  index.ts  jsx-runtime.ts  jsx.ts  layout.ts  node.ts  reconciler.ts  recycler-list.ts  render-tree.ts  renderer.ts  scroll-view.ts  styles.ts  trace.ts  types.ts  yoga-native.ts
src/components/: Box.ts  Button.ts  FlatList.ts  Image.ts  ScrollView.ts  Text.ts  TextInput.ts  index.ts
src/devserver/: cli.ts  index.ts
src/layout/: glyph-layout.ts  index.ts  layout-engine.ts  style-to-yoga.ts  yoga-layout.ts
src/platform/: android.ts  ios-vue.ts  ios.ts  native.ts  web.ts
src/react/: components.tsx  event-handler.ts  glyph-node.ts  host-config.ts  index.ts  node-to-layout.ts  platform-web.ts  render-commands.ts  renderer.ts
src/vue/: index.ts  (+5 more)
tests/: accessibility.test.ts  android-platform.test.ts  benchmark.test.ts  build-ios.test.ts  canvas-renderer.test.ts  canvaskit-renderer.test.ts  command-batcher.test.ts  commands.test.ts  components.test.ts  devserver.test.ts  e2e.test.ts  events.test.ts  hooks.test.ts  ios-platform.test.ts  jsx.test.ts  layout-engine.test.ts  layout.test.ts  node.test.ts  platform-native.test.ts  platform-web.test.ts  quickjs-compat.ts  quickjs-solidjs.ts  react-components.test.ts  react-e2e.test.ts  react-event-handler.test.ts  react-glyph-node.test.ts  react-host-config.test.ts  react-node-to-layout.test.ts  react-render-commands.test.ts  react-renderer.test.ts  reconciler.test.ts  recycler-list.test.ts  render-tree.test.ts  renderer-factory.test.ts  renderer.test.ts  scroll-view.test.ts  style-to-yoga.test.ts  styles.test.ts  trace.test.ts  types.test.ts  (+6 more)
(+40 files in other folders)
